<resources>
    <string name="app_name">ReadTrack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="book_genre">Book Genre</string>
    <string name="started_date">Started Date</string>
    <string name="finished_date">Finished Date</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="temp_rating_stars">TempRatingStars</string>
    <string name="home">Home</string>
    <string name="read">Read</string>
    <string name="add_book">Add Book</string>
    <string name="reading">Reading</string>
    <string name="want_to_read">Want to read</string>
    <string name="started_date_finished_date">Started Date - Finished Date</string>
    <string name="add_new_book_button">Add new book button</string>
    <string name="book_shelf">Bookshelf</string>
    <string name="required">*Required</string>
    <string name="book_name_text_empty">You must enter the book name</string>
    <string name="author_name_text_empty">You must enter the author name</string>
    <string name="book_genre_text_empty">You must enter the book genre</string>
    <string name="date_range_text_empty">You must select a date range</string>
    <string name="date_text_empty">You must select a date</string>
    <string name="must_fill">You must fill in this field</string>
    <string name="status_not_selected">You must select one reading status</string>
    <string name="non_zero_rating">You must rate the book from one to five</string>
    <string name="add_a_book_cover">Add a book cover</string>
    <string name="my_bookshelf">My Bookshelf</string>
    <string name="add_custom_book">Add a book</string>
    <string name="author_name">Author Name</string>
    <string name="order">Order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="attributes">Attributes</string>
    <string name="update_book_record">Update book record</string>
    <string name="save">Save</string>
    <string name="status_required">Status</string>
    <string name="rating_required">Rating</string>
    <string name="general_exception_error">An error has occurred. Please try again.</string>
    <string name="network_exception_error">A network error has occurred. Please check your network connection and try again.</string>
    <string name="request_exception_error">Failed to retrieve data. Please try again.</string>
    <string name="no_result_found">No results found.</string>
    <string name="search">Search</string>
    <string name="book_search">Book Search</string>
    <string name="middle_dot">·</string>
    <string name="details">Details</string>
    <string name="add_to_my_bookshelf">Add to my bookshelf</string>
    <string name="added_to_my_bookshelf">Added to my bookshelf</string>
    <string name="a_tag_icon_besides_book_genre">A tag icon besides book genre</string>
    <string name="description">Description</string>
</resources>