<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="vm"
            type="com.example.readtrack.viewmodels.AddBookViewModel" />
        <variable
            name="coverImg"
            type="android.graphics.drawable.Drawable" />
        <variable
            name="coverTxt"
            type="String" />
        <variable
            name="name"
            type="String" />
        <variable
            name="author"
            type="String" />
        <variable
            name="status"
            type="com.example.readtrack.types.Status" />
        <variable
            name="genre"
            type="String" />
        <variable
            name="dateRange"
            type="String" />
        <variable
            name="startedDate"
            type="String" />
        <variable
            name="rating"
            type="Float" />
        <variable
            name="nameErrorMsg"
            type="String" />
        <variable
            name="authorErrorMsg"
            type="String" />
        <variable
            name="genreErrorMsg"
            type="String" />
        <variable
            name="dateRangeErrorMsg"
            type="String" />
        <variable
            name="startedDateErrorMsg"
            type="String" />
    </data>

    <LinearLayout
        android:id="@+id/addBookFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBookCoverBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@{coverImg}"
            android:text="@{coverTxt}"
            android:textAllCaps="false"
            android:textColor="#447C8C"
            tools:text="@string/add_a_book_cover" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_name"
            app:errorEnabled="true"
            app:error="@{nameErrorMsg}"
            app:helperText="@string/required"
            app:startIconDrawable="@drawable/mdi_book_open_variant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={name}"
                android:afterTextChanged="@{() -> vm.validateName(name)}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookAuthorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_author"
            app:errorEnabled="true"
            app:error="@{authorErrorMsg}"
            app:helperText="@string/required"
            app:startIconDrawable="@drawable/mdi_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookAuthorTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={author}"
                android:afterTextChanged="@{() -> vm.validateAuthor(author)}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookGenreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_genre"
            app:errorEnabled="true"
            app:error="@{genreErrorMsg}"
            app:helperText="@string/required"
            app:startIconDrawable="@drawable/mdi_heart_multiple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bookGenreTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={genre}"
                android:afterTextChanged="@{() -> vm.validateGenre(genre)}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_required"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/statusChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:status="@={status}"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/readChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/read" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/readingChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/reading" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wtrChip"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/want_to_read" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/statusChipWarningText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/status_not_selected"-->
<!--            android:textColor="@color/design_default_color_error"-->
<!--            android:visibility="gone"-->
<!--            tools:visibility="visible" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startedToFinishedDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/started_date_finished_date"
            android:visibility="gone"
            app:errorEnabled="true"
            app:error="@{dateRangeErrorMsg}"
            app:helperText="@string/required"
            app:startIconDrawable="@drawable/mdi_calendar_range"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startedToFinishedDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:text="@={dateRange}"
                android:afterTextChanged="@{() -> vm.validateDateRange(dateRange)}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startedDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/started_date"
            android:visibility="gone"
            app:errorEnabled="true"
            app:error="@{startedDateErrorMsg}"
            app:helperText="@string/required"
            app:startIconDrawable="@drawable/mdi_calendar_start"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startedDateTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:text="@={startedDate}"
                android:afterTextChanged="@{() -> vm.validateStartedDate(startedDate)}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ratingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_required"
                android:visibility="gone"
                tools:visibility="visible" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                android:numStars="5"
                android:rating="@{rating}"
                android:stepSize="1"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/ratingBarWarningText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/non_zero_rating"-->
<!--            android:textColor="@color/design_default_color_error"-->
<!--            android:visibility="gone"-->
<!--            tools:visibility="visible" />-->
    </LinearLayout>
</layout>
